--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,5 @@
+name: CI
+
 on:
   push:
     branches:
@@ -7,12 +9,23 @@ on:
       - main
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.20
+
+      - name: Install dependencies
+        run: go mod download
+
+      - name: Generate mocks
+        run: go generate ./...
+
       - name: Run tests
-        run: go test -v internal/graph/resolver_test.go
-
-
+        run: go test ./... -v
