--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,30 +2,25 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3 # Обновлено с v2 на v3
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v4 # Обновлено с v2 на v4
         with:
           go-version: 1.20
 
       - name: Install dependencies
         run: go mod download
 
-      - name: Generate mocks
-        run: go generate ./...
-
       - name: Run tests
-        run: go test ./... -v
+        run: go test ./...
